# best-cad-mcp

./: .gitignore  .mcp.json  AUTOCAD_COM_RESEARCH_REPORT.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  server.json
.agents/skills/cad-operations/: SKILL.md
.agents/skills/cad-operations/agents/: openai.yaml
.agents/skills/cad-operations/references/: CN-CONSTRUCTION.md  TOOL-MAP.md  WORKFLOWS.md
.agents/skills/draft-cn-construction-cad/: SKILL.md
.agents/skills/draft-cn-construction-cad/agents/: openai.yaml
.agents/skills/draft-cn-construction-cad/references/: cn-drafting-baseline.md  cn-layer-font-style.md  constructibility-checklist.md  tool-selection-rules.md
.agents/skills/draw-assembly-diagrams/: SKILL.md
.agents/skills/draw-assembly-diagrams/agents/: openai.yaml
.agents/skills/draw-assembly-diagrams/references/: assembly-drawing-requirements.md
.agents/skills/draw-assembly-diagrams/references/assembly/: index.md
.agents/skills/draw-assembly-diagrams/references/assembly/standards/: generic-mechanical.md
.claude/: settings.json
.codex/: config.toml
.github/workflows/: release.yml
prompts/: copy_drawing_from_image.md  precise_draw_from_spec.md  recognize_components_from_image.md  repair_drawing.md  understand_existing_drawing.md  vlm_review_drawing.md
scripts/: verify_autocad_mcp_tools.py  verify_cad_understanding_workflow.py
src/: cad_controller.py  cad_data_model.py  cad_database.py  cad_utils.py  doctor.py  server.py
src/cad_tools/: __init__.py  advanced_tools.py  attribute_tools.py  block_tools.py  dimension_tools.py  drawing_tools.py  edit_tools.py  file_tools.py  hatch_tools.py  layer_tools.py  polyline_tools.py  query_tools.py  solid_tools.py  text_tools.py  utility_tools.py  view_tools.py
src/cad_understanding/: __init__.py  analysis.py  common.py  constraints.py  dimension_binding.py  engineering_review.py  image_trace.py  ir.py  ir_builder.py  plan.py  resources.py  result.py  semantic_graph.py  validators.py  view_grounding.py  vision.py  vlm.py
tests/: test_all_interfaces.py  test_cad_ir_builder.py  test_cad_understanding_end_to_end.py  test_cad_understanding_result.py  test_constraints.py  test_image_trace.py  test_plan_dsl.py  test_runtime_preflight.py  test_semantic_graph.py  test_understanding_interfaces.py  test_usability_fixes.py  test_validators.py  test_view_grounding_artifacts.py  test_view_grounding_math.py  test_vision_embedding.py  test_vlm_findings.py
