[project]
name = "best-cad-mcp"
version = "1.5.0"
description = "Comprehensive Windows AutoCAD MCP server with 260+ specialized tools for drawing, editing, annotation, layouts, plotting, visual verification, metadata indexing, 3D solids, and CAD workflow guidance."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CAD MCP Developer"}
]
keywords = ["autocad", "mcp", "cad", "model-context-protocol", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "mcp[cli]>=1.4.0",
    "pywin32>=306",
    "comtypes>=1.4.0",
    "pyautocad>=0.2.0",
    "typing_extensions>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/LokmenoWer/best-cad-mcp"
Repository = "https://github.com/LokmenoWer/best-cad-mcp"
Issues = "https://github.com/LokmenoWer/best-cad-mcp/issues"

[project.optional-dependencies]
visual = [
    "cairosvg>=2.7.1",
    "Pillow>=10.0",
]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
cad-mcp = "src.server:main"
cad-mcp-doctor = "src.doctor:main"

[tool.pytest.ini_options]
markers = [
    "autocad_com: tests that require a local AutoCAD COM session and should not run in GitHub Actions release publishing",
]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"
